Added --add-opens flags to allow reflective access to internal jdk classes