@@ -1,5 +1,6 @@
 plugins {
-	id 'java'
+    id 'java'
+    id 'application'
 }
 
 group = 'aero.sort'
@@ -7,23 +8,31 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
-	mavenCentral()
-	jcenter()
+    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-	// darcula-LaF
-	implementation 'com.bulenkov:darcula:2018.2'
+    // darcula-LaF
+    implementation 'com.bulenkov:darcula:2018.2'
 
-	// logging
-	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
+    // logging
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
 
-	// testing
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    // testing
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+}
+
+application {
+    mainClass = 'aero.sort.vizualizer.VizualizerApplication'
+    applicationDefaultJvmArgs = [
+            '--add-opens=java.desktop/sun.swing=ALL-UNNAMED',
+            '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+    ]
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
